[package]
name = "chat-wasm-mistral"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
candle-core = "0.5.1"
candle-nn = "0.5.1"
candle-transformers = "0.5.1"
hf-hub = "0.3.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokenizers = "0.19.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
shuttle-runtime = "0.46.0"
