[package]
name = "llm-engine-service"
version = "0.1.1"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"

candle-core = { version = "0.5.1" }
candle-nn = { version = "0.5.1" }
candle-transformers = { version = "0.5.1" }
cudarc = {version = "0.11.6", optional = true }

hf-hub = "0.3.2"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
tokenizers = "0.19.1"
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
shuttle-runtime = "0.46.0"
core-graphics-types = "0.1.3"

[features]
default = ["candle-core/default", "candle-nn/default", "candle-transformers/default"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "cudarc/cuda-12010"]
cudnn = ["candle-core/cudnn", "cudarc/cudnn"]
accelerate = ["candle-core/accelerate", "candle-nn/accelerate", "candle-transformers/accelerate"]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]


[build.env]
passthrough = [
    "RUST_BACKTRACE=full",
    "RUST_LOG",
    "TRAVIS",
]